# co-log-fast-logger

./: CHANGELOG.md  README.md  co-log-fast-logger.cabal
src/: CoLogFastLogger.hs
