cabal-version: 2.2
name:
  co-log-fast-logger
version:
  0.1
synopsis:
  co-log for fast-logger
description:
  co-log for fast-logger
homepage:
  https://github.com/chessai/co-log-fast-logger
bug-reports:
  https://github.com/chessai/co-log-fast-logger/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data, Text, Utility, Development, System
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

library
  hs-source-dirs:
    src
  exposed-modules:
    CoLogFastLogger
  build-depends:
    , base >= 4.11 && < 4.14
    , co-log-core >= 0.2 && < 0.3
    , exceptions >= 0.8 && < 0.11
    , fast-logger >= 3.0 && < 3.1
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/co-log-fast-logger.git
